# regcap

./: .gitignore  .replit  .replit.deploy  AI_ETHICS.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  app.py  app_backup.py  app_deploy.py  app_flask.py  app_streamlit.py  basic_working_app.py  clean_app.py  current_html.txt  deploy.py  deployment.py  diagnostic_app.py  fix_mermaid.py  flask_app.py  flask_deploy.py  flask_test.py  main.py  minimal_tab_fix.py  minimal_test.py  new_flask_app.py  pyproject.toml  regcap_deploy.py  regcap_minimal.py  regcap_streamlit.py  replit.md  simple_deploy.py  simple_js_fix.py  simplified_app.py  simplified_app_js_fix.py  simplified_deployment.py  simplified_flask_app.py  streamlit_app.py  test_app.py  (+2 more)
.streamlit/: config.toml  main.py
attached_assets/: Pasted--index-416-GET-https-4126795e-7c0e-431d-b627-b08e0c43ec1d-0-1744873514030.txt  Pasted-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en-head-title-H-1743787158548.txt  Pasted-Explanation-The-diagram-provides-an-overview-of-the-ISO-20022-standard-which-is-a-framework-for-el-1743837553873.txt  Pasted-Explanation-This-diagram-outlines-the-process-of-developing-ISO-20022-message-standards-which-are--1744884766678.txt  Pasted-Flowchart-Diagram-Explanation-This-diagram-illustrates-the-process-and-components-involved-in-stan-1743838818239.txt
data_storage/: data.json  test_file.json  test_file.txt
static/js/: navigation.js
utils/: db_manager.py  openai_helper.py  pdf_processor.py  vector_store.py
